[UIMA-1879] handle blanks in file paths
git-svn-id: https://svn.apache.org/repos/asf/uima/uimaj/trunk@999567 13f79535-47bb-0310-9956-ffa450edef68