@@ -24,6 +24,8 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.apache.uima.UIMAFramework;
@@ -104,13 +106,17 @@ public class XCasWriterCasConsumer extends CasConsumer_ImplBase {
       SourceDocumentInformation fileLoc = (SourceDocumentInformation) it.next();
       File inFile;
       try {
-        inFile = new File(new URL(fileLoc.getUri()).getPath());
+        // handle blanks in path
+        // https://issues.apache.org/jira/browse/UIMA-1748
+        URI uri = new URI(fileLoc.getUri());
+        inFile = new File(uri);
+
         String outFileName = inFile.getName();
         if (fileLoc.getOffsetInSource() > 0) {
           outFileName += fileLoc.getOffsetInSource();
         }
         outFile = new File(mOutputDir, outFileName);
-      } catch (MalformedURLException e1) {
+      } catch (URISyntaxException e) {
         // invalid URL, use default processing below
       }
     }
